generated/manifests/prod-axon/longhorn/NetworkPolicy-instance-manager.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: instance-manager
  namespace: longhorn-system
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: longhorn-manager
        - podSelector:
            matchLabels:
              longhorn.io/component: instance-manager
        - podSelector:
            matchLabels:
              longhorn.io/component: backing-image-manager
        - podSelector:
            matchLabels:
              longhorn.io/component: backing-image-data-source
    - ports:
        - port: 3260
          protocol: TCP
  podSelector:
    matchLabels:
      longhorn.io/component: instance-manager
  policyTypes:
    - Ingress
